working on the structure for advanced-techniques.html

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -24,143 +24,143 @@
         <div>
           <h2 class="page_heading">Advanced Techniques</h2>
           <ul id="quick_links" class="quick_links">
-            <li><a href="">Weapons・Shields</a>
+            <li><a href="#weapons_shields">Weapons・Shields</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#increasing_max_synthesis_slots">Increasing Max Synthesis Slots</a></li>
+                <li><a href="#transferring_upgrade_value_only">Transferring Upgrade Value Only</a></li>
+                <li><a href="#synthesizing_without_curses">Synthesizing Without Transferring Curses</a></li>
+                <li><a href="#remove_curses_using_straw_voodoll">Remove Curses Using Straw Voodoll Monsters</a></li>
+                <li><a href="#long_lasting_dried_bonito">Long-Lasting Dried Bonito</a></li>
+                <li><a href="#gamble_synthesis">Gamble Synthesis</a></li>
+                <li><a href="#checking_if_mixer_is_copycat_mask">Checking if a Mixer is a Copycat Mask</a></li>
+                <li><a href="#synthesizing_silver_arrows_onto_equipment">Synthesizing Silver Arrows onto Equipment</a></li>
+                <li><a href="#knowledge_related_to_ironheads_head">Knowledge Related to Ironhead's Head</a></li>
+                <li><a href="#thrown_equipment_damage">Thrown Equipment Damage</a></li>
               </ul>
             </li>
-            <li><a href="">Bracelets</a>
+            <li><a href="#bracelets">Bracelets</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#using_scout_bracelet_to_determine_map_monsters">Using Scout Bracelet to Determine Map / Monsters</a></li>
+                <li><a href="#how_to_use_pierce_bracelet">How to Use Pierce Bracelet</a></li>
+                <li><a href="#how_to_use_phantasm_bracelet">How to Use Phantasm Bracelet</a></li>
+                <li><a href="#how_to_use_bend_bracelet">How to Use Bend Bracelet</a></li>
               </ul>
             </li>
-            <li><a href="">Scrolls</a>
+            <li><a href="#scrolls">Scrolls</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#reusable_sanctuary_scroll_blank_water">Reusable Sanctuary Scroll (Blank Scroll + Water Pot)</a></li>
+                <li><a href="#reusable_sanctuary_scroll_non_blank">Reusable Sanctuary Scroll (Non-Blank Scroll)</a></li>
+                <li><a href="#identify_scrolls_using_blank_scrolls_water">Identify Scrolls Using Blank Scrolls and Water</a></li>
+                <li><a href="#free_blank_scrolls_from_shops">Free Blank Scrolls from Shops</a></li>
+                <li><a href="#obtaining_underwater_items_using_sanctaruy_scroll">Obtaining Underwater Items Using Sanctaruy Scroll</a></li>
+                <li><a href="#sanctuary_scrolls_inside_napus_storage">Sanctuary Scrolls inside Napus Storage</a></li>
+                <li><a href="#taking_sanctuary_scrolls_from_pots">Taking Sanctuary Scrolls from Pots</a></li>
+                <li><a href="#extinction_scroll_information">Extinction Scroll Information</a></li>
+                <li><a href="#plating_scroll_to_conver_iron_arrows_to_silver_arrows">Plating Scroll to Convert Iron Arrows to Silver Arrows</a></li>
               </ul>
             </li>
-            <li><a href="">Staves</a>
+            <li><a href="#staves">Staves</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#wall_reflection">Wall Reflection</a></li>
+                <li><a href="#hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager Using Wall Reflection</a></li>
+                <li><a href="#hit_taishodon_using_wall_reflection">Hit Taishodon with Staff Magic Using Wall Reflection</a></li>
+                <li><a href="#avoid_escargon_using_wall_reflection">Avoid Escargon's Ability Using Wall Reflection</a></li>
+                <li><a href="#using_grass_gainer_grass_tosser_staves">Using Grass Gainer or Grass Tosser Staves.</a></li>
+                <li><a href="#stop_fast_monsters_using_fire_staff">Stop Monsters with Fast Movement Using Fire Staff</a></li>
               </ul>
             </li>
-            <li><a href="">Pots</a>
+            <li><a href="#pots">Pots</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#identifying_storage_pots">Identifying Storage Pots</a></li>
+                <li><a href="#storage_pot_bomb">Storage Pot Bomb</a></li>
+                <li><a href="#water_pot_bomb">Water Pot Bomb</a></li>
+                <li><a href="#free_hand_from_sticky_pot">How to Free Your Hand from Sticky Pot</a></li>
+                <li><a href="#insert_items_into_sticky_pot">How to Insert Items into Sticky Pot</a></li>
+                <li><a href="#how_to_use_grass_effect_pot">How to Use Grass Effect Pot</a></li>
+                <li><a href="#locating_memento_pots">Locating Memento Pots</a></li>
               </ul>
             </li>
-            <li><a href="">Projectiles・Other Items</a>
+            <li><a href="#projectiles_other_items">Projectiles・Other</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#1_wooden_or_iron_arrow">1 Wooden or Iron Arrow</a></li>
+                <li><a href="#trigger_traps_using_porky_stones">Trigger Traps Using Porky Stones</a></li>
+                <li><a href="#trigger_traps_using_cannonballs">Trigger Traps Using Cannonballs</a></li>
+                <li><a href="#throwing_gitan">Throwing Gitan</a></li>
+                <li><a href="#treasure_rooms">Treasure Rooms</a></li>
+                <li><a href="#1_million_gitan">1,000,000 Gitan</a></li>
+                <li><a href="#when_collecting_castle_materials">When Collecting Castle Materials</a></li>
+                <li><a href="#obtain_castle_material_after_oni_attack">Obtain a Castle Material after an Oni Attack</a></li>
               </ul>
             </li>
-            <li><a href="">Monsters・Traps・Statues・Status Conditions</a>
+            <li><a href="#monsters_traps_statues_status_conditions">Monsters・Traps・Statues・Status Conditions</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#techniques_while_confused">Techniques When Shiren is Confused</a></li>
+                <li><a href="#paralysis_and_sleep">Paralysis and Sleep</a></li>
+                <li><a href="#curing_blindness">Curing Blindness</a></li>
+                <li><a href="#collect_2_items_kengo_and_trip_stone">Collect 2 Items Using Kengo and Trip Stone</a></li>
+                <li><a href="#utilize_poison_arrows">Utilize Poison Arrows</a></li>
+                <li><a href="#monsters_with_0_strength">Monsters with 0 Strength</a></li>
+                <li><a href="#large_riceballs_with_nigiri_morph">Large Riceballs with Nigiri Morph </a></li>
+                <li><a href="#one_shot_nigiri_trainee_monsters">One-Shot Nigiri Trainee Family Monsters</a></li>
+                <li><a href="#restore_hp_using_goat_pastor">Restore HP Using Goat Pastor</a></li>
+                <li><a href="#double_level_ups_using_gazelle_pope">Double Level Ups Using Gazelle Pope</a></li>
+                <li><a href="#attacks_against_underwater_enemies">Attacks Against Underwater Enemies</a></li>
+                <li><a href="#attacks_against_frozen_enemies">Attacks Against Frozen Enemies</a></li>
+                <li><a href="#moving_statues">Moving Statues</a></li>
+                <li><a href="#one_shot_statues">One-Shot Statues</a></li>
+                <li><a href="#utilizing_10_damage_statue">Utilizing 10 Damage Statue</a></li>
+                <li><a href="#happy_shield_and_10_damage_statue">Happy Shield + 10 Damage Statue</a></li>
               </ul>
             </li>
-            <li><a href="">Allies・Monster Pots</a>
+            <li><a href="#allies_monster_pots">Allies・Monster Pots</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#the_call_command">The [Call] Command</a></li>
+                <li><a href="#return_ally_monsters_without_ending_turn">Return Ally Monsters Without Ending Turn</a></li>
+                <li><a href="#locating_defeated_ally_monsters">Locating Defeated Ally Monsters</a></li>
+                <li><a href="#increasing_movement_speed_ally_monsters">Increasing Movement Speed of Ally Monsters</a></li>
+                <li><a href="#identify_grass_items_using_himakichi">Identify Grass Items Using Himakichi</a></li>
+                <li><a href="#unequip_equipment_without_ending_turn">Unequip Equipment Without Ending Turn</a></li>
+                <li><a href="#cover_for_zaloklefts_weakness_using_bellthoven">Cover for Zalokleft's Weakness Using Bellthoven</a></li>
+                <li><a href="#mixer_synthesis_inside_napus_storage">Mixer Synthesis inside Napus Storage</a></li>
               </ul>
             </li>
-            <li><a href="">Shops・Dungeon Related</a>
+            <li><a href="#shops_dungeon_related">Shops・Dungeon Related</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#zalokleft_and_traders">Zaloklefts and Traders</a></li>
+                <li><a href="#if_you_defeat_a_trader">If you Defeat a Trader...</a></li>
+                <li><a href="#obtaining_lots_of_vouchers">Obtaining Lots of Vouchers</a></li>
+                <li><a href="#pick_up_items_before_traders">Pick up Items before Traders!</a></li>
+                <li><a href="#restock_scroll_and_specialty_shops">Restock Scroll + Specialty Shops</a></li>
+                <li><a href="#expanding_rooms_by_breaking_walls">Expanding Rooms By Breaking Walls</a></li>
+                <li><a href="#restock_scroll_when_there_are_2_shops">Restock Scroll When There are 2 Shops</a></li>
+                <li><a href="#explosion_scroll_inside_shops">Explosion Scroll inside Shops</a></li>
+                <li><a href="#identify_using_carry_in_items">Identify Using Carry-In Items</a></li>
+                <li><a href="#special_monster_houses_in_sealed_room">Special Monster Houses in Sealed Room</a></li>
+                <li><a href="#knowledge_to_help_locate_golden_intervals">Knowledge to help Locate Golden Intervals</a></li>
+                <li><a href="#using_idash_to_locate_golden_intervals">Using iDash to Locate Golden Intervals</a></li>
               </ul>
             </li>
-            <li><a href="">Item Related</a>
+            <li><a href="#item_related">Item Related</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#collect_items_in_queen_spiders_nest">Collect Items In Queen Spider's Nest</a></li>
+                <li><a href="#monster_trap_and_riceball_or_gitan_statue">Monster Trap + Riceball or Gitan Statue</a></li>
+                <li><a href="#obtain_items_quickly_monster_trap_trip_statue">Obtain Items Quickly (Monster Trap + Trip Statue)</a></li>
+                <li><a href="#obtaining_arrows_bow_boy">Obtaining Arrows (Bow Boy)</a></li>
+                <li><a href="#obtaining_arrows_traps">Obtaining Arrows (Traps)</a></li>
+                <li><a href="#upgrading_equipment_efficiently">Upgrading Equipment Efficiently</a></li>
+                <li><a href="#wall_collapse_scroll">Wall Collapse Scroll</a></li>
+                <li><a href="#blank_scroll">Blank Scroll</a></li>
+                <li><a href="#possession_staff">Possession Staff</a></li>
               </ul>
             </li>
-            <li><a href="">Other Tips</a>
+            <li><a href="#other_tips">Other Tips</a>
               <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#view_items_during_demos">View Items During Demos</a></li>
+                <li><a href="#story_time_attack">Story TA (Time Attack)</a></li>
               </ul>
             </li>
           </ul>
-
+          
         </div>
       </main>
     </div>
