finished structure for advanced-techniques.html

--- a/html/playing/advanced-techniques.html
+++ b/html/playing/advanced-techniques.html
@@ -23,6 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Advanced Techniques</h2>
+          <p>Text</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#weapons_shields">Weapons・Shields</a>
               <ul>
@@ -65,7 +66,7 @@
                 <li><a href="#hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager Using Wall Reflection</a></li>
                 <li><a href="#hit_taishodon_using_wall_reflection">Hit Taishodon with Staff Magic Using Wall Reflection</a></li>
                 <li><a href="#avoid_escargon_using_wall_reflection">Avoid Escargon's Ability Using Wall Reflection</a></li>
-                <li><a href="#using_grass_gainer_grass_tosser_staves">Using Grass Gainer or Grass Tosser Staves.</a></li>
+                <li><a href="#using_grass_gainer_grass_tosser_staves">Using Grass Gainer or Grass Tosser Staves</a></li>
                 <li><a href="#stop_fast_monsters_using_fire_staff">Stop Monsters with Fast Movement Using Fire Staff</a></li>
               </ul>
             </li>
@@ -94,13 +95,13 @@
             </li>
             <li><a href="#monsters_traps_statues_status_conditions">Monsters・Traps・Statues・Status Conditions</a>
               <ul>
-                <li><a href="#techniques_while_confused">Techniques When Shiren is Confused</a></li>
+                <li><a href="#techniques_when_confused">Techniques When Confused</a></li>
                 <li><a href="#paralysis_and_sleep">Paralysis and Sleep</a></li>
                 <li><a href="#curing_blindness">Curing Blindness</a></li>
                 <li><a href="#collect_2_items_kengo_and_trip_stone">Collect 2 Items Using Kengo and Trip Stone</a></li>
                 <li><a href="#utilize_poison_arrows">Utilize Poison Arrows</a></li>
                 <li><a href="#monsters_with_0_strength">Monsters with 0 Strength</a></li>
-                <li><a href="#large_riceballs_with_nigiri_morph">Large Riceballs with Nigiri Morph </a></li>
+                <li><a href="#large_riceballs_with_nigiri_morph">Large Riceballs with Nigiri Morph</a></li>
                 <li><a href="#one_shot_nigiri_trainee_monsters">One-Shot Nigiri Trainee Family Monsters</a></li>
                 <li><a href="#restore_hp_using_goat_pastor">Restore HP Using Goat Pastor</a></li>
                 <li><a href="#double_level_ups_using_gazelle_pope">Double Level Ups Using Gazelle Pope</a></li>
@@ -160,7 +161,199 @@
               </ul>
             </li>
           </ul>
-          
+          <h2 id="weapons_shields">Weapons・Shields</h2>
+          <h3 id="increasing_max_synthesis_slots">Increasing Max Synthesis Slots</h3>
+          <p>Text</p>
+          <h3 id="transferring_upgrade_value_only">Transferring Upgrade Value Only</h3>
+          <p>Text</p>
+          <h3 id="synthesizing_without_curses">Synthesizing Without Transferring Curses</h3>
+          <p>Text</p>
+          <h3 id="remove_curses_using_straw_voodoll">Remove Curses Using Straw Voodoll Monsters</h3>
+          <p>Text</p>
+          <h3 id="long_lasting_dried_bonito">Long-Lasting Dried Bonito</h3>
+          <p>Text</p>
+          <h3 id="gamble_synthesis">Gamble Synthesis</h3>
+          <p>Text</p>
+          <h3 id="checking_if_mixer_is_copycat_mask">Checking if a Mixer is a Copycat Mask</h3>
+          <p>Text</p>
+          <h3 id="synthesizing_silver_arrows_onto_equipment">Synthesizing Silver Arrows onto Equipment</h3>
+          <p>Text</p>
+          <h3 id="knowledge_related_to_ironheads_head">Knowledge Related to Ironhead's Head</h3>
+          <p>Text</p>
+          <h3 id="thrown_equipment_damage">Thrown Equipment Damage</h3>
+          <p>Text</p>
+          <h2 id="bracelets">Bracelets</h2>
+          <h3 id="using_scout_bracelet_to_determine_map_monsters">Using Scout Bracelet to Determine Map / Monsters</h3>
+          <p>Text</p>
+          <h3 id="how_to_use_pierce_bracelet">How to Use Pierce Bracelet</h3>
+          <p>Text</p>
+          <h3 id="how_to_use_phantasm_bracelet">How to Use Phantasm Bracelet</h3>
+          <p>Text</p>
+          <h3 id="how_to_use_bend_bracelet">How to Use Bend Bracelet</h3>
+          <p>Text</p>
+          <h2 id="scrolls">Scrolls</h2>
+          <h3 id="reusable_sanctuary_scroll_blank_water">Reusable Sanctuary Scroll (Blank Scroll + Water Pot)</h3>
+          <p>Text</p>
+          <h3 id="reusable_sanctuary_scroll_non_blank">Reusable Sanctuary Scroll (Non-Blank Scroll)</h3>
+          <p>Text</p>
+          <h3 id="identify_scrolls_using_blank_scrolls_water">Identify Scrolls Using Blank Scrolls and Water</h3>
+          <p>Text</p>
+          <h3 id="free_blank_scrolls_from_shops">Free Blank Scrolls from Shops</h3>
+          <p>Text</p>
+          <h3 id="obtaining_underwater_items_using_sanctaruy_scroll">Obtaining Underwater Items Using Sanctaruy Scroll</h3>
+          <p>Text</p>
+          <h3 id="sanctuary_scrolls_inside_napus_storage">Sanctuary Scrolls inside Napus Storage</h3>
+          <p>Text</p>
+          <h3 id="taking_sanctuary_scrolls_from_pots">Taking Sanctuary Scrolls from Pots</h3>
+          <p>Text</p>
+          <h3 id="extinction_scroll_information">Extinction Scroll Information</h3>
+          <p>Text</p>
+          <h3 id="plating_scroll_to_conver_iron_arrows_to_silver_arrows">Plating Scroll to Convert Iron Arrows to Silver Arrows</h3>
+          <p>Text</p>
+          <h2 id="staves">Staves</h2>
+          <h3 id="wall_reflection">Wall Reflection</h3>
+          <p>Text</p>
+          <h3 id="hit_tonosamadon_manager_using_wall_reflection">Hit Tonosamadon or Manager Using Wall Reflection</h3>
+          <p>Text</p>
+          <h3 id="hit_taishodon_using_wall_reflection">Hit Taishodon with Staff Magic Using Wall Reflection</h3>
+          <p>Text</p>
+          <h3 id="avoid_escargon_using_wall_reflection">Avoid Escargon's Ability Using Wall Reflection</h3>
+          <p>Text</p>
+          <h3 id="using_grass_gainer_grass_tosser_staves">Using Grass Gainer or Grass Tosser Staves</h3>
+          <p>Text</p>
+          <h3 id="stop_fast_monsters_using_fire_staff">Stop Monsters with Fast Movement Using Fire Staff</h3>
+          <p>Text</p>
+          <h2 id="pots">Pots</h2>
+          <h3 id="identifying_storage_pots">Identifying Storage Pots</h3>
+          <p>Text</p>
+          <h3 id="storage_pot_bomb">Storage Pot Bomb</h3>
+          <p>Text</p>
+          <h3 id="water_pot_bomb">Water Pot Bomb</h3>
+          <p>Text</p>
+          <h3 id="free_hand_from_sticky_pot">How to Free Your Hand from Sticky Pot</h3>
+          <p>Text</p>
+          <h3 id="insert_items_into_sticky_pot">How to Insert Items into Sticky Pot</h3>
+          <p>Text</p>
+          <h3 id="how_to_use_grass_effect_pot">How to Use Grass Effect Pot</h3>
+          <p>Text</p>
+          <h3 id="locating_memento_pots">Locating Memento Pots</h3>
+          <p>Text</p>
+          <h2 id="projectiles_other_items">Projectiles・Other</h2>
+          <h3 id="1_wooden_or_iron_arrow">1 Wooden or Iron Arrow</h3>
+          <p>Text</p>
+          <h3 id="trigger_traps_using_porky_stones">Trigger Traps Using Porky Stones</h3>
+          <p>Text</p>
+          <h3 id="trigger_traps_using_cannonballs">Trigger Traps Using Cannonballs</h3>
+          <p>Text</p>
+          <h3 id="throwing_gitan">Throwing Gitan</h3>
+          <p>Text</p>
+          <h3 id="treasure_rooms">Treasure Rooms</h3>
+          <p>Text</p>
+          <h3 id="1_million_gitan">1,000,000 Gitan</h3>
+          <p>Text</p>
+          <h3 id="when_collecting_castle_materials">When Collecting Castle Materials</h3>
+          <p>Text</p>
+          <h3 id="obtain_castle_material_after_oni_attack">Obtain a Castle Material after an Oni Attack</h3>
+          <p>Text</p>
+          <h2 id="monsters_traps_statues_status_conditions">Monsters・Traps・Statues・Status Conditions</h2>
+          <h3 id="techniques_when_confused">Techniques When Confused</h3>
+          <p>Text</p>
+          <h3 id="paralysis_and_sleep">Paralysis and Sleep</h3>
+          <p>Text</p>
+          <h3 id="curing_blindness">Curing Blindness</h3>
+          <p>Text</p>
+          <h3 id="collect_2_items_kengo_and_trip_stone">Collect 2 Items Using Kengo and Trip Stone</h3>
+          <p>Text</p>
+          <h3 id="utilize_poison_arrows">Utilize Poison Arrows</h3>
+          <p>Text</p>
+          <h3 id="monsters_with_0_strength">Monsters with 0 Strength</h3>
+          <p>Text</p>
+          <h3 id="large_riceballs_with_nigiri_morph">Large Riceballs with Nigiri Morph</h3>
+          <p>Text</p>
+          <h3 id="one_shot_nigiri_trainee_monsters">One-Shot Nigiri Trainee Family Monsters</h3>
+          <p>Text</p>
+          <h3 id="restore_hp_using_goat_pastor">Restore HP Using Goat Pastor</h3>
+          <p>Text</p>
+          <h3 id="double_level_ups_using_gazelle_pope">Double Level Ups Using Gazelle Pope</h3>
+          <p>Text</p>
+          <h3 id="attacks_against_underwater_enemies">Attacks Against Underwater Enemies</h3>
+          <p>Text</p>
+          <h3 id="attacks_against_frozen_enemies">Attacks Against Frozen Enemies</h3>
+          <p>Text</p>
+          <h3 id="moving_statues">Moving Statues</h3>
+          <p>Text</p>
+          <h3 id="one_shot_statues">One-Shot Statues</h3>
+          <p>Text</p>
+          <h3 id="utilizing_10_damage_statue">Utilizing 10 Damage Statue</h3>
+          <p>Text</p>
+          <h3 id="happy_shield_and_10_damage_statue">Happy Shield + 10 Damage Statue</h3>
+          <p>Text</p>
+          <h2 id="allies_monster_pots">Allies・Monster Pots</h2>
+          <h3 id="the_call_command">The [Call] Command</h3>
+          <p>Text</p>
+          <h3 id="return_ally_monsters_without_ending_turn">Return Ally Monsters Without Ending Turn</h3>
+          <p>Text</p>
+          <h3 id="locating_defeated_ally_monsters">Locating Defeated Ally Monsters</h3>
+          <p>Text</p>
+          <h3 id="increasing_movement_speed_ally_monsters">Increasing Movement Speed of Ally Monsters</h3>
+          <p>Text</p>
+          <h3 id="identify_grass_items_using_himakichi">Identify Grass Items Using Himakichi</h3>
+          <p>Text</p>
+          <h3 id="unequip_equipment_without_ending_turn">Unequip Equipment Without Ending Turn</h3>
+          <p>Text</p>
+          <h3 id="cover_for_zaloklefts_weakness_using_bellthoven">Cover for Zalokleft's Weakness Using Bellthoven</h3>
+          <p>Text</p>
+          <h3 id="mixer_synthesis_inside_napus_storage">Mixer Synthesis inside Napus Storage</h3>
+          <p>Text</p>
+          <h2 id="shops_dungeon_related">Shops・Dungeon Related</h2>
+          <h3 id="zalokleft_and_traders">Zaloklefts and Traders</h3>
+          <p>Text</p>
+          <h3 id="if_you_defeat_a_trader">If you Defeat a Trader...</h3>
+          <p>Text</p>
+          <h3 id="obtaining_lots_of_vouchers">Obtaining Lots of Vouchers</h3>
+          <p>Text</p>
+          <h3 id="pick_up_items_before_traders">Pick up Items before Traders!</h3>
+          <p>Text</p>
+          <h3 id="restock_scroll_and_specialty_shops">Restock Scroll + Specialty Shops</h3>
+          <p>Text</p>
+          <h3 id="expanding_rooms_by_breaking_walls">Expanding Rooms By Breaking Walls</h3>
+          <p>Text</p>
+          <h3 id="restock_scroll_when_there_are_2_shops">Restock Scroll When There are 2 Shops</h3>
+          <p>Text</p>
+          <h3 id="explosion_scroll_inside_shops">Explosion Scroll inside Shops</h3>
+          <p>Text</p>
+          <h3 id="identify_using_carry_in_items">Identify Using Carry-In Items</h3>
+          <p>Text</p>
+          <h3 id="special_monster_houses_in_sealed_room">Special Monster Houses in Sealed Room</h3>
+          <p>Text</p>
+          <h3 id="knowledge_to_help_locate_golden_intervals">Knowledge to help Locate Golden Intervals</h3>
+          <p>Text</p>
+          <h3 id="using_idash_to_locate_golden_intervals">Using iDash to Locate Golden Intervals</h3>
+          <p>Text</p>
+          <h2 id="item_related">Item Related</h2>
+          <h3 id="collect_items_in_queen_spiders_nest">Collect Items In Queen Spider's Nest</h3>
+          <p>Text</p>
+          <h3 id="monster_trap_and_riceball_or_gitan_statue">Monster Trap + Riceball or Gitan Statue</h3>
+          <p>Text</p>
+          <h3 id="obtain_items_quickly_monster_trap_trip_statue">Obtain Items Quickly (Monster Trap + Trip Statue)</h3>
+          <p>Text</p>
+          <h3 id="obtaining_arrows_bow_boy">Obtaining Arrows (Bow Boy)</h3>
+          <p>Text</p>
+          <h3 id="obtaining_arrows_traps">Obtaining Arrows (Traps)</h3>
+          <p>Text</p>
+          <h3 id="upgrading_equipment_efficiently">Upgrading Equipment Efficiently</h3>
+          <p>Text</p>
+          <h3 id="wall_collapse_scroll">Wall Collapse Scroll</h3>
+          <p>Text</p>
+          <h3 id="blank_scroll">Blank Scroll</h3>
+          <p>Text</p>
+          <h3 id="possession_staff">Possession Staff</h3>
+          <p>Text</p>
+          <h2 id="other_tips">Other Tips</h2>
+          <h3 id="view_items_during_demos">View Items During Demos</h3>
+          <p>Text</p>
+          <h3 id="story_time_attack">Story TA (Time Attack)</h3>
+          <p>Text</p>
         </div>
       </main>
     </div>
